--- a/slide.html
+++ b/slide.html
@@ -75,8 +75,8 @@
   <script>
     
     const slides = [
-      { url: "/html/slide1.html" },
-      { url: "/html/slide2.html" },
+      { url: "./html/slide1.html" },
+      { url: "./html/slide2.html" },
       { url: "/html/slide3.html" },
       { url: "/html/slide4.html" },
       { url: "/html/slide5.html" }
