--- a/slide.html
+++ b/slide.html
@@ -75,11 +75,11 @@
   <script>
     
     const slides = [
-      { url: "slide1.html" },
-      { url: "slide2.html" },
-      { url: "slide3.html" },
-      { url: "slide4.html" },
-      { url: "slide5.html" }
+      { url: "./html/slide1.html" },
+      { url: "./slide2.html" },
+      { url: "./slide3.html" },
+      { url: "./slide4.html" },
+      { url: "./slide5.html" }
     ];
 
     let current = 0;
