--- a/slide.html
+++ b/slide.html
@@ -74,14 +74,13 @@
 
   <script>
     
-    const slides = [
-      { url: "./html/slide1.html" },
-      { url: "./slide2.html" },
-      { url: "./slide3.html" },
-      { url: "./slide4.html" },
-      { url: "./slide5.html" }
-    ];
-
+   const slides = [
+  { url: "/html/slide1.html" },
+  { url: "/html/slide2.html" },
+  { url: "/html/slide3.html" },
+  { url: "/html/slide4.html" },
+  { url: "/html/slide5.html" }
+];
     let current = 0;
     const contentEl = document.getElementById('slider-content');
     const indicatorEl = document.getElementById('indicator');
