done fixing bugs

--- a/slide.html
+++ b/slide.html
@@ -75,11 +75,11 @@
   <script>
     
    const slides = [
-  { url: "/html/slide1.html" },
-  { url: "/html/slide2.html" },
-  { url: "/html/slide3.html" },
-  { url: "/html/slide4.html" },
-  { url: "/html/slide5.html" }
+  { url: "./html/slide1.html" },
+  { url: "./html/slide2.html" },
+  { url: "./html/slide3.html" },
+  { url: "./html/slide4.html" },
+  { url: "./html/slide5.html" }
 ];
     let current = 0;
     const contentEl = document.getElementById('slider-content');
