--- a/html/slide2.html
+++ b/html/slide2.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RESCURE - NEAR </title>
-  <link rel="shortcut icon" href="images/s1.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/images/s1.png" type="image/x-icon">
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
