--- a/html/slide5.html
+++ b/html/slide5.html
@@ -254,7 +254,7 @@
       const loader = document.getElementById('loader');
       loader.style.display = 'flex';
       setTimeout(() => {
-        window.top.location.href = 'home.html';
+        window.top.location.href = 'signup.html';
       }, 3000);
     }
   </script>
