Updating my login files

--- a/html/fire.html
+++ b/html/fire.html
@@ -653,7 +653,7 @@
 
 
     <div class="nav-item "> <a href="soslog.html" id="sosBtn" style="color: #2c3e50; text-decoration: none;"><i
-          class="fas fa-map-marker-alt"></i>SOS</a></div>
+          class="fas fa-circle-exclamation"></i></i>SOS</a></div>
 
 
     <div class="nav-item" id="alertsBtn" style="cursor: pointer;">
