--- a/html/payment.html
+++ b/html/payment.html
@@ -193,6 +193,41 @@
     <!-- Paystack Inline Script -->
     <script src="https://js.paystack.co/v1/inline.js"></script>
     <script>
+        / Custom professional alert
+function showAlert(message, type = "success") {
+  const alertBox = document.createElement("div");
+  alertBox.textContent = message;
+  alertBox.style.position = "fixed";
+  alertBox.style.top = "20px";
+  alertBox.style.right = "20px";
+  alertBox.style.padding = "15px 20px";
+  alertBox.style.fontFamily = "Poppins, sans-serif";
+  alertBox.style.fontSize = "14px";
+  alertBox.style.fontWeight = "500";
+  alertBox.style.color = "#333";
+  alertBox.style.background = "#fff";
+  alertBox.style.borderLeft = "5px solid " + (type === "error" ? "#f44336" : "#4CAF50");
+  alertBox.style.borderRadius = "8px";
+  alertBox.style.boxShadow = "0 4px 12px rgba(0,0,0,0.15)";
+  alertBox.style.zIndex = "9999";
+  alertBox.style.opacity = "0";
+  alertBox.style.transform = "translateX(100%)";
+  alertBox.style.transition = "all 0.4s ease";
+
+  document.body.appendChild(alertBox);
+
+  requestAnimationFrame(() => {
+    alertBox.style.opacity = "1";
+    alertBox.style.transform = "translateX(0)";
+  });
+
+  setTimeout(() => {
+    alertBox.style.opacity = "0";
+    alertBox.style.transform = "translateX(100%)";
+    setTimeout(() => alertBox.remove(), 400);
+  }, 3000);
+}
+
         const checkbox = document.getElementById('agree');
         const payBtn = document.getElementById('payBtn');
 
@@ -225,21 +260,23 @@
                     fetch("/api/verify-payment", {
                         method: "POST",
                         headers: { "Content-Type": "application/json" },
-                        body: JSON.stringify({ reference: response.reference, phone: "08012345678" }) // replace with logged-in user phone
+                        body: JSON.stringify({ reference: response.reference, phone: "08019825334" })
                     })
                         .then(res => res.json())
                         .then(data => {
                             if (data.success) {
-                                alert("✅ Payment successful & verified!");
-                                window.location.href = "index.html"; // or homepage
+                                showAlert(" Payment successful & verified!");
+                                window.location.href = "home.html"; 
                             } else {
-                                alert("❌ Payment could not be verified. Please contact support.");
+                                showAlert(" Payment could not be verified. Please contact support.");
                             }
                         });
                 }
             });
             handler.openIframe();
         }
+
+        
     </script>
 </body>
 
