--- a/html/stoke.html
+++ b/html/stoke.html
@@ -420,9 +420,8 @@ header .right #closeBtn:hover {
           class="fas fa-map-marker-alt"></i>Map</a></div>
 
 
-     <div class="nav-item "> <a href="soslog.html" id="sosBtn" style="color: #2c3e50; text-decoration: none;"><i
-          class="fas fa-map-marker-alt"></i>SOS</a></div>
-
+     <div class="nav-item "> <a href="soslog.html" id="sosBtn" style="color: #2c3e50; text-decoration: none;">
+          <i class="fas fa-circle-exclamation"></i>SOS</a></div>
 
     <div class="nav-item" id="alertsBtn" style="cursor: pointer;">
       <i class="fas fa-bell"></i> Alerts
